--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6955fc94-bfaf-4dc9-aff1-98aa1fd60329",
    "metadata": {},
    "outputs": [
@@ -18,15 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: flask in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (3.0.3)\n",
-      "Requirement already satisfied: Werkzeug>=3.0.0 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from flask) (3.0.4)\n",
-      "Requirement already satisfied: Jinja2>=3.1.2 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from flask) (3.1.4)\n",
-      "Requirement already satisfied: itsdangerous>=2.1.2 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from flask) (2.2.0)\n",
-      "Requirement already satisfied: click>=8.1.3 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from flask) (8.1.7)\n",
-      "Requirement already satisfied: blinker>=1.6.2 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from flask) (1.8.2)\n",
-      "Requirement already satisfied: colorama in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from click>=8.1.3->flask) (0.4.6)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from Jinja2>=3.1.2->flask) (2.1.5)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
+      "Collecting flaskNote: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -36,6 +28,37 @@
       "\n",
       "[notice] A new release of pip is available: 23.2.1 -> 24.2\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  Obtaining dependency information for flask from https://files.pythonhosted.org/packages/61/80/ffe1da13ad9300f87c93af113edd0638c75138c42a0994becfacac078c06/flask-3.0.3-py3-none-any.whl.metadata\n",
+      "  Using cached flask-3.0.3-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Collecting Werkzeug>=3.0.0 (from flask)\n",
+      "  Obtaining dependency information for Werkzeug>=3.0.0 from https://files.pythonhosted.org/packages/4b/84/997bbf7c2bf2dc3f09565c6d0b4959fefe5355c18c4096cfd26d83e0785b/werkzeug-3.0.4-py3-none-any.whl.metadata\n",
+      "  Using cached werkzeug-3.0.4-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Requirement already satisfied: Jinja2>=3.1.2 in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from flask) (3.1.4)\n",
+      "Collecting itsdangerous>=2.1.2 (from flask)\n",
+      "  Obtaining dependency information for itsdangerous>=2.1.2 from https://files.pythonhosted.org/packages/04/96/92447566d16df59b2a776c0fb82dbc4d9e07cd95062562af01e408583fc4/itsdangerous-2.2.0-py3-none-any.whl.metadata\n",
+      "  Using cached itsdangerous-2.2.0-py3-none-any.whl.metadata (1.9 kB)\n",
+      "Collecting click>=8.1.3 (from flask)\n",
+      "  Obtaining dependency information for click>=8.1.3 from https://files.pythonhosted.org/packages/00/2e/d53fa4befbf2cfa713304affc7ca780ce4fc1fd8710527771b58311a3229/click-8.1.7-py3-none-any.whl.metadata\n",
+      "  Using cached click-8.1.7-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting blinker>=1.6.2 (from flask)\n",
+      "  Obtaining dependency information for blinker>=1.6.2 from https://files.pythonhosted.org/packages/bb/2a/10164ed1f31196a2f7f3799368a821765c62851ead0e630ab52b8e14b4d0/blinker-1.8.2-py3-none-any.whl.metadata\n",
+      "  Using cached blinker-1.8.2-py3-none-any.whl.metadata (1.6 kB)\n",
+      "Requirement already satisfied: colorama in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from click>=8.1.3->flask) (0.4.6)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from Jinja2>=3.1.2->flask) (2.1.5)\n",
+      "Using cached flask-3.0.3-py3-none-any.whl (101 kB)\n",
+      "Using cached blinker-1.8.2-py3-none-any.whl (9.5 kB)\n",
+      "Using cached click-8.1.7-py3-none-any.whl (97 kB)\n",
+      "Using cached itsdangerous-2.2.0-py3-none-any.whl (16 kB)\n",
+      "Using cached werkzeug-3.0.4-py3-none-any.whl (227 kB)\n",
+      "Installing collected packages: Werkzeug, itsdangerous, click, blinker, flask\n",
+      "Successfully installed Werkzeug-3.0.4 blinker-1.8.2 click-8.1.7 flask-3.0.3 itsdangerous-2.2.0\n"
      ]
     }
    ],
@@ -112,7 +135,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
+   "id": "d0964736-b2c4-451e-a61c-a6c2a27fe7c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pytesseract\n",
+      "  Obtaining dependency information for pytesseract from https://files.pythonhosted.org/packages/7a/33/8312d7ce74670c9d39a532b2c246a853861120486be9443eebf048043637/pytesseract-0.3.13-py3-none-any.whl.metadata\n",
+      "  Using cached pytesseract-0.3.13-py3-none-any.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: packaging>=21.3 in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from pytesseract) (24.1)\n",
+      "Collecting Pillow>=8.0.0 (from pytesseract)\n",
+      "  Obtaining dependency information for Pillow>=8.0.0 from https://files.pythonhosted.org/packages/74/0a/d4ce3c44bca8635bd29a2eab5aa181b654a734a29b263ca8efe013beea98/pillow-10.4.0-cp312-cp312-win_amd64.whl.metadata\n",
+      "  Using cached pillow-10.4.0-cp312-cp312-win_amd64.whl.metadata (9.3 kB)\n",
+      "Using cached pytesseract-0.3.13-py3-none-any.whl (14 kB)\n",
+      "Using cached pillow-10.4.0-cp312-cp312-win_amd64.whl (2.6 MB)\n",
+      "Installing collected packages: Pillow, pytesseract\n",
+      "Successfully installed Pillow-10.4.0 pytesseract-0.3.13\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pytesseract"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "654e3e12-c8b6-409e-8feb-c859ec7c918a",
    "metadata": {},
    "outputs": [
@@ -124,10 +185,13 @@
       "\n",
       "  Obtaining dependency information for opencv-python from https://files.pythonhosted.org/packages/ec/6c/fab8113424af5049f85717e8e527ca3773299a3c6b02506e66436e19874f/opencv_python-4.10.0.84-cp37-abi3-win_amd64.whl.metadata\n",
       "  Using cached opencv_python-4.10.0.84-cp37-abi3-win_amd64.whl.metadata (20 kB)\n",
-      "Requirement already satisfied: numpy>=1.21.2 in c:\\users\\user\\pycharmprojects\\my_learning\\.venv\\lib\\site-packages (from opencv-python) (2.1.0)\n",
+      "Collecting numpy>=1.21.2 (from opencv-python)\n",
+      "  Obtaining dependency information for numpy>=1.21.2 from https://files.pythonhosted.org/packages/8c/bf/d9d214a9dff020ad1663f1536f45d34e052e4c7f630c46cd363e785e3231/numpy-2.1.0-cp312-cp312-win_amd64.whl.metadata\n",
+      "  Using cached numpy-2.1.0-cp312-cp312-win_amd64.whl.metadata (59 kB)\n",
       "Using cached opencv_python-4.10.0.84-cp37-abi3-win_amd64.whl (38.8 MB)\n",
-      "Installing collected packages: opencv-python\n",
-      "Successfully installed opencv-python-4.10.0.84\n"
+      "Using cached numpy-2.1.0-cp312-cp312-win_amd64.whl (12.6 MB)\n",
+      "Installing collected packages: numpy, opencv-python\n",
+      "Successfully installed numpy-2.1.0 opencv-python-4.10.0.84\n"
      ]
     },
     {
@@ -142,6 +206,50 @@
    ],
    "source": [
     "pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f83d66e7-b21d-485d-bdc6-c40d8b05cb3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandasNote: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "  Obtaining dependency information for pandas from https://files.pythonhosted.org/packages/22/a5/a0b255295406ed54269814bc93723cfd1a0da63fb9aaf99e1364f07923e5/pandas-2.2.2-cp312-cp312-win_amd64.whl.metadata\n",
+      "  Using cached pandas-2.2.2-cp312-cp312-win_amd64.whl.metadata (19 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from pandas) (2.1.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Obtaining dependency information for pytz>=2020.1 from https://files.pythonhosted.org/packages/9c/3d/a121f284241f08268b21359bd425f7d4825cffc5ac5cd0e1b3d82ffd2b10/pytz-2024.1-py2.py3-none-any.whl.metadata\n",
+      "  Using cached pytz-2024.1-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Obtaining dependency information for tzdata>=2022.7 from https://files.pythonhosted.org/packages/65/58/f9c9e6be752e9fcb8b6a0ee9fb87e6e7a1f6bcab2cdc73f02bb7ba91ada0/tzdata-2024.1-py2.py3-none-any.whl.metadata\n",
+      "  Using cached tzdata-2024.1-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\user\\pycharmprojects\\data_extraction\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Using cached pandas-2.2.2-cp312-cp312-win_amd64.whl (11.5 MB)\n",
+      "Using cached pytz-2024.1-py2.py3-none-any.whl (505 kB)\n",
+      "Using cached tzdata-2024.1-py2.py3-none-any.whl (345 kB)\n",
+      "Installing collected packages: pytz, tzdata, pandas\n",
+      "Successfully installed pandas-2.2.2 pytz-2024.1 tzdata-2024.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas\n"
    ]
   },
   {
@@ -164,49 +272,78 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
-      "[2024-08-28 20:44:21,959] ERROR in app: Exception on /dataextractor [GET]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\pytesseract\\pytesseract.py\", line 275, in run_tesseract\n",
-      "    proc = subprocess.Popen(cmd_args, **subprocess_args())\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\subprocess.py\", line 1026, in __init__\n",
-      "    self._execute_child(args, executable, preexec_fn, close_fds,\n",
-      "  File \"C:\\Users\\user\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\subprocess.py\", line 1538, in _execute_child\n",
-      "    hp, ht, pid, tid = _winapi.CreateProcess(executable, args,\n",
-      "                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "FileNotFoundError: [WinError 2] The system cannot find the file specified\n",
+      "Press CTRL+C to quit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "out [[[ 60  60  60]\n",
+      "  [ 60  60  60]\n",
+      "  [ 60  60  60]\n",
+      "  ...\n",
+      "  [ 59  59  59]\n",
+      "  [ 59  59  59]\n",
+      "  [ 59  59  59]]\n",
       "\n",
-      "During handling of the above exception, another exception occurred:\n",
+      " [[ 70  71  68]\n",
+      "  [ 70  71  68]\n",
+      "  [ 70  71  68]\n",
+      "  ...\n",
+      "  [ 70  71  68]\n",
+      "  [ 70  71  68]\n",
+      "  [ 70  71  68]]\n",
       "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\flask\\app.py\", line 1473, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\flask\\app.py\", line 882, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\flask\\app.py\", line 880, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\flask\\app.py\", line 865, in dispatch_request\n",
-      "    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_23172\\3827422030.py\", line 19, in get_dict_json\n",
-      "    text = pytesseract.image_to_string(image)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\pytesseract\\pytesseract.py\", line 486, in image_to_string\n",
-      "    return {\n",
-      "           ^\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\pytesseract\\pytesseract.py\", line 489, in <lambda>\n",
-      "    Output.STRING: lambda: run_and_get_output(*args),\n",
-      "                           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\pytesseract\\pytesseract.py\", line 352, in run_and_get_output\n",
-      "    run_tesseract(**kwargs)\n",
-      "  File \"C:\\Users\\user\\PycharmProjects\\my_learning\\.venv\\Lib\\site-packages\\pytesseract\\pytesseract.py\", line 280, in run_tesseract\n",
-      "    raise TesseractNotFoundError()\n",
-      "pytesseract.pytesseract.TesseractNotFoundError: C:\\Program Files\\Tesseract-OCR\\tesseract.exe is not installed or it's not in your PATH. See README file for more information.\n",
-      "127.0.0.1 - - [28/Aug/2024 20:44:22] \"GET /dataextractor HTTP/1.1\" 500 -\n"
+      " [[240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  ...\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  ...\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]]\n",
+      "\n",
+      " [[240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  ...\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]]\n",
+      "\n",
+      " [[240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  ...\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]\n",
+      "  [240 245 245]]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [29/Aug/2024 15:27:39] \"GET /dataextractor HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Eggshell', 'Camisole', 'Top', '1', '$123', '$123']\n",
+      "['Cuban', 'Collar', 'Shirt.', '2', '$127', '$254']\n",
+      "['Floral', 'Cotton', 'Dress.', '1', '$123', '$123']\n"
      ]
     }
    ],
@@ -227,8 +364,8 @@
     "    #file = request.files['image']\n",
     "    #file.save('static/' + file.filename)\n",
     "   \n",
-    "    pytesseract.pytesseract.tesseract_cmd = r'C:\\Program Files\\Tesseract-OCR\\tesseract.exe'\n",
-    "    image=cv2.imread(r'C:\\Users\\user\\PycharmProjects\\my_learning\\rdx.png')\n",
+    "    pytesseract.pytesseract.tesseract_cmd =r'C:\\Users\\user\\PycharmProjects\\data_extraction\\tesseract-ocr\\tesseract.exe'\n",
+    "    image=cv2.imread(r'C:\\Users\\user\\PycharmProjects\\data_extraction\\rdx.png')\n",
     "    text = pytesseract.image_to_string(image)\n",
     "    variable=text.split(\"Total\")\n",
     "    variable\n",
